--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -1,506 +1,17 @@
-// ============================== Configuration initial
+/* ===== Configuration initial ============================== */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-
-html {
-    font-size: 62.5%;
-
-    body {
-        font-size: 1.6rem; // Tamanho da fonte 16px
-
-
-
-        .error {
-            background-color: tomato;
-        }
-
-        .swal2-popup {
-            font-size: 14px;
-        }
-
-        section {
-            font-family: 'Marko One', serif;
-
-            position: relative;
-            min-height: 100vh;
-
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: #2EB99C;
-
-            .container {
-                position: relative;
-                min-width: 1000px;
-                min-height: 450px;
-                display: flex;
-                z-index: 2;
-
-                .contactinfo {
-                    position: absolute;
-                    z-index: 1;
-
-                    top: 40px;
-                    width: 350px;
-                    padding: 40px;
-                    height: calc(100% - 80px);
-                    background-color: #2EB99C;
-
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: space-between;
-                    box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
-
-                    h1 {
-                        color: #474747;
-                        font-weight: 900;
-                    }
-
-                    .containerCep {
-                        display: flex;
-                        flex-direction: column;
-                        align-items: normal;
-
-                        /* ===== Button ============================== */
-                        input {
-                            margin: 1rem 0rem;
-                            padding: 5px;
-                            border: none;
-                            outline: none;
-                            color: #474747;
-                            font-weight: 900;
-                            border-radius: 5px;
-                            background: #2EB99C;
-                            background: linear-gradient(90deg, #81e6d9 0%, #4fd1c5 100%);
-                            border: 1px solid #00FFCB;
-                        }
-
-                        input:hover {
-                            box-shadow: 0 0 60px rgba(0, 255, 203, .64);
-                        }
-
-                        .button {
-                            font-family: 'Marko One', serif;
-                            font-size: 20px;
-                            text-transform: uppercase;
-                            letter-spacing: 1.3px;
-                            color: #474747;
-                            font-weight: 900;
-                            background: #2EB99C;
-                            background: linear-gradient(90deg, #81e6d9 0%, #4fd1c5 100%);
-                            border: none;
-                            border-radius: 5px;
-                            box-shadow: 12px 12px 24px #4fd1c5a3;
-                            transition: all 0.3s ease-in-out 0s;
-                            cursor: pointer;
-                            outline: none;
-                            position: relative;
-                            padding: 10px;
-                            margin-top: 5rem;
-                        }
-
-                        button::before {
-                            content: '';
-                            border-radius: 15px;
-                            min-width: calc(270px + 12px);
-                            min-height: calc(50px + 12px);
-                            border: 6px solid #00FFCB;
-                            box-shadow: 0 0 60px rgba(0, 255, 203, .64);
-                            position: absolute;
-                            top: 50%;
-                            left: 50%;
-                            transform: translate(-50%, -50%);
-                            opacity: 0;
-                            transition: all .3s ease-in-out 0s;
-                        }
-
-                        .button:hover,
-                        .button:focus {
-                            color: #313133;
-                            transform: translateY(-6px);
-                        }
-
-                        button:hover::before,
-                        button:focus::before {
-                            opacity: 1;
-                        }
-
-                        button::after {
-                            content: '';
-                            width: 30px;
-                            height: 30px;
-                            border-radius: 100%;
-                            border: 6px solid #00FFCB;
-                            position: absolute;
-                            z-index: -1;
-                            top: 50%;
-                            left: 50%;
-                            transform: translate(-50%, -50%);
-                            animation: ring 1.5s infinite;
-                        }
-
-                        button:hover::after,
-                        button:focus::after {
-                            animation: none;
-                            display: none;
-                        }
-
-                        @keyframes ring {
-                            0% {
-                                width: 30px;
-                                height: 30px;
-                                opacity: 1;
-                            }
-
-                            100% {
-                                width: 150px;
-                                height: 150px;
-                                opacity: 0;
-                            }
-                        }
-                    }
-
-                    .containerIcon {
-
-                        ul {
-                            display: flex;
-                            list-style: none;
-                            justify-content: space-around;
-
-                            li {
-                                a {
-                                    display: flex;
-                                    flex-direction: row;
-                                    font-size: 5rem;
-                                    color: #474747;
-                                    font-weight: 900;
-                                    text-decoration: none;
-                                    width: 5rem;
-                                    transition: .3s ease-in-out;
-
-                                    img {
-                                        width: 100%;
-                                    }
-
-                                    &:hover {
-                                        transform: rotateZ(-30deg);
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-
-                .contactForm {
-
-                    position: absolute;
-                    padding: 70px 50px;
-                    background-color: #EDC2C0;
-                    margin-left: 150px;
-                    padding-left: 250px;
-                    width: 840px;
-                    height: 100%;
-                    box-shadow: 0 50px 50px rgba(0, 0, 0, 0.5);
-
-                    .title {
-                        font-size: 3rem;
-                        font-weight: 900;
-                        color: #474747;
-                        text-align: center;
-                    }
-
-                    input {
-                        font-family: 'Marko One', serif;
-                        text-align: center;
-                        outline: none;
-                        padding: 5px;
-                        width: 30rem;
-                        border: 2px solid #2EB99C;
-                        border-radius: 5px;
-                        margin: 1rem 0rem;
-                        color: #474747;
-                        font-weight: 900;
-                    }
-
-                    input:nth-child(2) {
-                        width: 10rem;
-                    }
-
-                    .ImgReset {
-                        width: 5rem;
-                        display: block;
-                        margin: 0 0 0 auto;
-                        cursor: pointer;
-                        transform: rotate(100deg);
-                        transition: .5s ease-in-out;
-
-                        &:hover {
-                            transform: rotateZ(-10deg);
-                        }
-
-                        img {
-                            width: 100%;
-                        }
-                    }
-                }
-
-                /* ===== Spinner ============================== */
-                .sk-folding-cube {
-                    z-index: 1;
-                    margin: 4rem 40rem 0;
-                    width: 40px;
-                    height: 40px;
-                    position: relative;
-                    -webkit-transform: rotateZ(45deg);
-                    transform: rotateZ(45deg);
-                }
-
-                .sk-folding-cube .sk-cube {
-                    float: left;
-                    width: 50%;
-                    height: 50%;
-                    position: relative;
-                    -webkit-transform: scale(1.1);
-                    -ms-transform: scale(1.1);
-                    transform: scale(1.1);
-                }
-
-                .sk-folding-cube .sk-cube:before {
-                    content: '';
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                    background-color: #474747;
-                    -webkit-animation: sk-foldCubeAngle 2.4s infinite linear both;
-                    animation: sk-foldCubeAngle 2.4s infinite linear both;
-                    -webkit-transform-origin: 100% 100%;
-                    -ms-transform-origin: 100% 100%;
-                    transform-origin: 100% 100%;
-                }
-
-                .sk-folding-cube .sk-cube2 {
-                    -webkit-transform: scale(1.1) rotateZ(90deg);
-                    transform: scale(1.1) rotateZ(90deg);
-                }
-
-                .sk-folding-cube .sk-cube3 {
-                    -webkit-transform: scale(1.1) rotateZ(180deg);
-                    transform: scale(1.1) rotateZ(180deg);
-                }
-
-                .sk-folding-cube .sk-cube4 {
-                    -webkit-transform: scale(1.1) rotateZ(270deg);
-                    transform: scale(1.1) rotateZ(270deg);
-                }
-
-                .sk-folding-cube .sk-cube2:before {
-                    -webkit-animation-delay: 0.3s;
-                    animation-delay: 0.3s;
-                }
-
-                .sk-folding-cube .sk-cube3:before {
-                    -webkit-animation-delay: 0.6s;
-                    animation-delay: 0.6s;
-                }
-
-                .sk-folding-cube .sk-cube4:before {
-                    -webkit-animation-delay: 0.9s;
-                    animation-delay: 0.9s;
-                }
-
-                @-webkit-keyframes sk-foldCubeAngle {
-
-                    0%,
-                    10% {
-                        -webkit-transform: perspective(140px) rotateX(-180deg);
-                        transform: perspective(140px) rotateX(-180deg);
-                        opacity: 0;
-                    }
-
-                    25%,
-                    75% {
-                        -webkit-transform: perspective(140px) rotateX(0deg);
-                        transform: perspective(140px) rotateX(0deg);
-                        opacity: 1;
-                    }
-
-                    90%,
-                    100% {
-                        -webkit-transform: perspective(140px) rotateY(180deg);
-                        transform: perspective(140px) rotateY(180deg);
-                        opacity: 0;
-                    }
-                }
-
-                @keyframes sk-foldCubeAngle {
-
-                    0%,
-                    10% {
-                        -webkit-transform: perspective(140px) rotateX(-180deg);
-                        transform: perspective(140px) rotateX(-180deg);
-                        opacity: 0;
-                    }
-
-                    25%,
-                    75% {
-                        -webkit-transform: perspective(140px) rotateX(0deg);
-                        transform: perspective(140px) rotateX(0deg);
-                        opacity: 1;
-                    }
-
-                    90%,
-                    100% {
-                        -webkit-transform: perspective(140px) rotateY(180deg);
-                        transform: perspective(140px) rotateY(180deg);
-                        opacity: 0;
-                    }
-                }
-            }
-        }
-
-        section::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 50%;
-            height: 100%;
-            background-color: #474747;
-        }
-
-        /* ===== GitHub Corners ============================== */
-        .github-corner:hover .octo-arm {
-            animation: octocat-wave 560ms ease-in-out
-        }
-
-        @keyframes octocat-wave {
-
-            0%,
-            100% {
-                transform: rotate(0)
-            }
-
-            20%,
-            60% {
-                transform: rotate(-25deg)
-            }
-
-            40%,
-            80% {
-                transform: rotate(10deg)
-            }
-        }
-
-        /* ===== Average ============================== */
-        @media (max-width:500px) {
-            .github-corner:hover .octo-arm {
-                animation: none
-            }
-
-            .github-corner .octo-arm {
-                animation: octocat-wave 560ms ease-in-out
-            }
-        }
-    }
-}
-
-
-/* ===== Average ============================== */
-@media(max-width: 1000px) {
-    html {
-        font-size: 93.75%;
-
-        body {
-            font-size: 1rem; // Tamanho da fonte 15px
-
-            section {
-                position: inherit;
-                display: inline-block;
-
-                .container {
-                    display: flex;
-                    flex-direction: column;
-
-                    .contactinfo {
-                        position: initial;
-                        width: 80%;
-                        margin: 0 auto;
-
-                        .containerIcon {
-                            ul {
-                                li {
-                                    a {
-                                        margin-top: 2rem;
-                                        width: 3rem;
-
-                                        img {
-                                            width: 100%;
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-
-                    .contactForm {
-                        position: initial;
-                        padding: 3rem;
-                        width: 80%;
-                        margin: 0 auto;
-
-                        .title {
-                            font-size: 2rem;
-                            margin-bottom: 1rem;
-                        }
-
-                        div {
-                            text-align: center;
-                        }
-
-                        input:nth-child(2) {
-                            width: 30rem;
-                        }
-
-                        .ImgReset {
-                            width: 3rem;
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
-
-@media(max-width: 720px) {
-    html {
-        font-size: 87.5%;
-
-        body {
-            font-size: 1rem; // Tamanho da fonte 14px
-
-            section {
-                .container {
-                    min-width: 40rem;
-
-                    .contactinfo {
-                        width: 100%;
-                    }
-
-                    .contactForm {
-                        width: 100%;
-
-                        .ImgReset {
-                            width: 3rem;
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
+/* ===== Imports initial ============================== */
+@import '_bgc';
+@import '_gitCorner';
+@import '_button';
+@import '_containerForm';
+@import '_containerMain';
+@import '_cube';
+@import '_icon';
+@import '_inputCep';
+@import '_average';
